--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <div align="center">
             <font size="20px">Welcome123!</font>
             <p/>
-            <img src="cloud_skills.jpg" width="800px"/>
+            <img src="./images/world.jpg" width="600px"/>
         </div>
     </body>
 </html>
